# tversky-neural-network-pytorch

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: test.yml
docs/: requirements.txt
docs/source/: conf.py  index.rst
tests/: test_tnn.py  test_tversky_neural_network.py
tversky_neural_network/: __init__.py  tnn.py
